# course_work_4

./: README.md  pyproject.toml
src/: abstract_classes.py  class_ForUser.py  class_headhunterapi.py  class_infosaver.py  class_superjobapi.py  class_vacancies.py  main.py
