[tool.poetry]
name = "cw-4-vacancies"
version = "0.1.0"
description = ""
authors = ["artem <deusestmaleficus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
